      
      - A new label field. Doesn't participate in validation. It shows
        its text as a label in the form.

      - Unicode mode. A form can now be put in 'unicode mode', which
        means it stores all its textual data as unicode strings. This
        allows for easier integration with Zope systems that use unicode
        internally, such as Silva.
 
    Bugs Fixed

      - The css_class value of a DateTime field had been ignored.  It
        is now properly passed down to its subfields, so all subfield
        elements are rendered with the given css_class value.

  1.5.0

    Features Added

      - Added ProductForm, which provides a wrapping around
        Formulator.BasicForm, allowing it to be created inside a
        product but used outside it.

      - Allow turning off of XML prologue section.

      - Optimization of TALESMethod by caching compiled expression.
        This speeds SilvaMetadata indexing up by a lot if a fallback
        on default is made, especially in the case of Python
        expressions, as it avoids lots of compilation overhead.

      - Extra attribute defined for list/multicheckbox/radio fields
        called 'extra_item', which allows setting HTML attributes to
        individual list item/checkbox/radio button.

    Bugs Fixed

      - XML serialization should be more consistent now; field properties
        are now ordered by name upon serialization.
 
      - Allow XML export of BasicForm.

  1.4.2
  
    Bugs Fixed

      - Sticky forms should now work correctly in the presence of unicode.
        Encoded data is automatically converted to unicode if the information
        is pulled from the REQUEST form.

  1.4.1

    Bugs Fixed

      - It was not possible to make DateTime fields not required when
        'allow_empty_time' was enabled. Fixed.

  1.4.0

    Features Added

      - Added limited ability to output unicode for selected
        fields. Only works properly in Zope 2.6.x, and the HTML pages